// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="APIComponent-root-120"
>
  <header
    className="MuiPaper-root-136 MuiPaper-elevation4-142 MuiAppBar-root-128 MuiAppBar-positionFixed-129 MuiAppBar-colorPrimary-134 mui-fixed"
  >
    <div
      className="MuiToolbar-root-163 MuiToolbar-regular-165 MuiToolbar-gutters-164 APIComponent-nowrap-122"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-173 MuiIconButton-root-167 MuiIconButton-colorInherit-168 APIComponent-menuButton-123"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-172"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-176"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-183"
        />
      </button>
      <h2
        className="MuiTypography-root-190 MuiTypography-title-196 MuiTypography-colorInherit-209 APIComponent-flex-121"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="APIComponent-spacer-125"
  />
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="APIComponent-root-120"
>
  <header
    className="MuiPaper-root-136 MuiPaper-elevation4-142 MuiAppBar-root-128 MuiAppBar-positionStatic-132 MuiAppBar-colorPrimary-134"
  >
    <div
      className="MuiToolbar-root-163 MuiToolbar-regular-165 MuiToolbar-gutters-164 APIComponent-nowrap-122"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-173 MuiIconButton-root-167 MuiIconButton-colorInherit-168 APIComponent-menuButton-123"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-172"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-176"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-183"
        />
      </button>
      <h2
        className="MuiTypography-root-190 MuiTypography-title-196 MuiTypography-colorInherit-209 APIComponent-flex-121"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="APIComponent-pad-126"
  />
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div
  className="APIComponent-root-120"
>
  <header
    className="MuiPaper-root-136 MuiPaper-elevation4-142 MuiAppBar-root-128 MuiAppBar-positionFixed-129 MuiAppBar-colorPrimary-134 mui-fixed"
  >
    <div
      className="MuiToolbar-root-163 MuiToolbar-regular-165 MuiToolbar-gutters-164 APIComponent-nowrap-122"
    >
      <button
        aria-label="Back"
        className="MuiButtonBase-root-173 MuiIconButton-root-167 MuiIconButton-colorInherit-168 APIComponent-menuButton-123"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-172"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-176"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-183"
        />
      </button>
      <h2
        className="MuiTypography-root-190 MuiTypography-title-196 MuiTypography-colorInherit-209 APIComponent-flex-121"
      >
        Test
      </h2>
      <div>
        <button>
          test
        </button>
      </div>
    </div>
  </header>
  <div
    className="APIComponent-spacer-125"
  />
</div>
`;
